# rutex

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  accepted_primitves.txt  build.rs
doc/: doc.tex
src/: build_info.rs  lib.rs  main.rs
src/errors/: mod.rs
src/macros/: mod.rs  pattern_matcher.rs  primitives.rs
src/parser/: lexer.rs  parser.rs
src/parsing/: types.rs
tests/: utf8tests.rs
