[package]
name = "rutex"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A TeX-based parser system"


[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dyn-clone = "1.0.19"
utf8streamreader = { git = "https://github.com/Webstonesl/rs-utf8reader", version = "0.1.0" }

[dev-dependencies]
chrono = { version = "0.4.40" }

[build-dependencies]
chrono = "0.4.40"
